@@ -45,6 +45,7 @@ import org.elasticsearch.test.junit.annotations.TestLogging;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.ToXContent;
 
+import java.io.IOException;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -927,7 +928,7 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             }
 
             @Override
-            public void writeTo(StreamOutput out) {
+            public void writeTo(StreamOutput out) throws IOException {
                 if (timeAdvancer != null) {
                     timeAdvancer.advanceTime();
                 }
@@ -1063,7 +1064,7 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
             cluster.stabilise();
 
             cluster.addNodesAndStabilise(1);
-            final ClusterNode newNode = cluster.clusterNodes.getLast();
+            final ClusterNode newNode = cluster.clusterNodes.get(cluster.clusterNodes.size() - 1);
             final PublishClusterStateStats newNodePublishStats = newNode.coordinator.stats().getPublishStats();
             // initial cluster state send when joining
             assertEquals(1L, newNodePublishStats.getFullClusterStateReceivedCount());
@@ -1288,8 +1289,9 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
      * @param failJoinOnAllNodes this controls whether to fail join on all nodes or only a majority subset. The atomic register CAS election
      *                           strategy will succeed in electing a master if any node can vote (even the master candidate voting for
      *                           itself).
+     * @throws Exception
      */
-    protected void clusterCannotFormWithFailingJoinValidation(boolean failJoinOnAllNodes) {
+    protected void clusterCannotFormWithFailingJoinValidation(boolean failJoinOnAllNodes) throws Exception {
         try (Cluster cluster = new Cluster(randomIntBetween(1, 5))) {
             List<ClusterNode> clusterNodesToFailJoin;
             if (failJoinOnAllNodes) {
@@ -1591,7 +1593,7 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
         }
 
         @Override
-        public void writeTo(StreamOutput out) {
+        public void writeTo(StreamOutput out) throws IOException {
             throw new ElasticsearchException(EXCEPTION_MESSAGE);
         }
 
@@ -1706,9 +1708,9 @@ public class CoordinatorTests extends AbstractCoordinatorTestCase {
                                 .toList();
                             assertThat(matchingNodes, hasSize(1));
 
-                            assertTrue(message, Regex.simpleMatch(discoveryMessageFn.apply(matchingNodes.getFirst().toString()), message));
+                            assertTrue(message, Regex.simpleMatch(discoveryMessageFn.apply(matchingNodes.get(0).toString()), message));
 
-                            nodesLogged.add(matchingNodes.getFirst().getLocalNode());
+                            nodesLogged.add(matchingNodes.get(0).getLocalNode());
                         }
 
                         @Override
