@@ -26,8 +26,6 @@ import org.elasticsearch.xpack.core.security.user.SystemUser;
 import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.security.operator.OperatorPrivileges.OperatorPrivilegesService;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
@@ -54,9 +52,9 @@ class AuthenticatorChain {
         OperatorPrivilegesService operatorPrivilegesService,
         AnonymousUser anonymousUser,
         AuthenticationContextSerializer authenticationSerializer,
-        PluggableAuthenticatorChain pluggableAuthenticatorChain,
         ServiceAccountAuthenticator serviceAccountAuthenticator,
         OAuth2TokenAuthenticator oAuth2TokenAuthenticator,
+        PluggableApiKeyAuthenticator pluggableApiKeyAuthenticator,
         ApiKeyAuthenticator apiKeyAuthenticator,
         RealmsAuthenticator realmsAuthenticator
     ) {
@@ -67,16 +65,13 @@ class AuthenticatorChain {
         this.isAnonymousUserEnabled = AnonymousUser.isAnonymousEnabled(settings);
         this.authenticationSerializer = authenticationSerializer;
         this.realmsAuthenticator = realmsAuthenticator;
-
-        List<Authenticator> authenticators = new ArrayList<>();
-        if (pluggableAuthenticatorChain.hasCustomAuthenticators()) {
-            authenticators.add(pluggableAuthenticatorChain);
-        }
-        authenticators.add(serviceAccountAuthenticator);
-        authenticators.add(oAuth2TokenAuthenticator);
-        authenticators.add(apiKeyAuthenticator);
-        authenticators.add(realmsAuthenticator);
-        this.allAuthenticators = Collections.unmodifiableList(authenticators);
+        this.allAuthenticators = List.of(
+            serviceAccountAuthenticator,
+            oAuth2TokenAuthenticator,
+            pluggableApiKeyAuthenticator,
+            apiKeyAuthenticator,
+            realmsAuthenticator
+        );
     }
 
     void authenticate(Authenticator.Context context, ActionListener<Authentication> originalListener) {
